// Copyright 2025 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.delegation.v1;

import "google/protobuf/duration.proto";
import "teleport/header/v1/metadata.proto";

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/delegation/v1;delegationv1";

// DelegationProfile is a set of pre-selected parameters from which a delegation
// session can be created. It describes the resources a given workload requires
// access to, their bot/workload identities, desired session length, and details
// for the user consent screen.
message DelegationProfile {
  // The kind of resource represented. This is always `delegation_profile`.
  string kind = 1;

  // Differentiates variations of the same kind. All resources should contain
  // one, even if it is never populated.
  string sub_kind = 2;

  // The version of the resource being represented.
  string version = 3;

  // Common metadata that all resources share.
  teleport.header.v1.Metadata metadata = 4;

  // Delegation profile configuration.
  DelegationProfileSpec spec = 5;
}

// Delegation profile configuration.
message DelegationProfileSpec {
  // Resources that will be accessible in sessions created using this profile.
  //
  // In the Resource ID format: /<cluster>/<kind>/<name>/<sub resource name>
  repeated string required_resources = 1;

  // Users (i.e. bots or workloads) authorized to use sessions created using
  // this profile.
  repeated DelegationUserSpec authorized_users = 2;

  // Default TTL of delegation sessions created using this profile.
  optional google.protobuf.Duration default_session_length = 3;

  // Configuration for the delegation consent screen.
  optional DelegationConsentSpec consent = 4;
}

// DelegationUserSpec describes a bot or workload who is allowed to use a
// delegation session.
message DelegationUserSpec {
  // Type of user (currently only "bot" is supported).
  string type = 1;

  oneof matcher {
    // Name of the bot who may use the delegation session.
    string bot_name = 2;
  }
}

// DelegationConsentSpec contains configuration for the delegation consent screen.
message DelegationConsentSpec {
  // Succinct description of the bot/workload to whom the user is delegating
  // their access (e.g. "Payroll Agent").
  string title = 1;

  // Longer-form explanation of what the bot/workload does, and why it needs
  // the user's access.
  string description = 2;

  // Allowlist of URLs where the user may be redirected after giving their
  // consent. Used to prevent open-redirect vulnerabilities.
  repeated string allowed_redirect_urls = 3;
}
